--- a/package.json
+++ b/package.json
@@ -16,10 +16,5 @@
   "bugs": {
     "url": "https://github.com/frvs085/Ideia-unica/issues"
   },
-  "homepage": "https://github.com/frvs085/Ideia-unica#readme",
-  "dependencies": {
-    "next": "^13.1.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+  "homepage": "https://github.com/frvs085/Ideia-unica#readme"
 }
